--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-next-project",
+  "name": "verkefni-5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,31 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.5.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "next": "15.2.3",
-    "next-auth": "^4.24.11",
+    "graphql-request": "^7.1.2",
+    "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-datocms": "^7.2.2",
+    "react-dom": "^19.0.0",
+    "sass": "^1.86.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.17.24",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.22.0",
-    "eslint-config-next": "15.2.3",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.5.3",
-    "prisma": "^6.5.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
+    "typescript": "^5"
   }
 }
