laga params og routing

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "graphql-request": "^7.1.2",
-    "next": "15.2.4",
-    "react": "^19.0.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
     "react-datocms": "^7.2.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "sass": "^1.86.2"
   },
   "devDependencies": {
