--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "graphql-request": "^7.1.2",
-    "next": "^15.2.4",
-    "react": "^19.1.0",
+    "next": "^13.5.11",
+    "react": "^18.3.1",
     "react-datocms": "^7.2.2",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "sass": "^1.86.2"
   },
   "devDependencies": {
@@ -21,7 +21,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
     "typescript": "^5"
   }
