--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^8.0.0",
     "graphql-request": "^7.1.2",
-    "next": "^13.5.11",
+    "next": "^15.2.4",
     "react": "^18.3.1",
     "react-datocms": "^7.2.2",
     "react-dom": "^18.3.1",
@@ -21,10 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.4",
-    "typescript": "^5"
+    "eslint-config-next": "^13.0.0",
+    "typescript": "^5.8.2"
   }
 }
