--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-    "build": {
-      "env": {
-        "NODE_VERSION": "16" 
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/next"
       }
-    }
+    ],
+    "routes": [
+      {
+        "src": "/old-page",
+        "dest": "/new-page"
+      }
+    ]
   }
   
