--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,10 @@
 {
-    "extends": ["next/core-web-vitals", "prettier"],
-    "plugins": ["prettier"],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"],
-    "@typescript-eslint/no-explicit-any": "warn", 
-    "no-unused-vars": "warn", 
-    "no-console": "warn" 
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": "off",
+    "no-console": "off"
   }
-  }
-  
+}
